docs(Toast): deprecate middle and top start positions

--- a/playground/Toast.html
+++ b/playground/Toast.html
@@ -19,7 +19,7 @@
   <sgds-button slot="actions" size="sm">Exhibit</sgds-button>
   <sgds-button slot="actions" size="sm">Exhibit</sgds-button> -->
 <!-- </sgds-subnav> -->
-<sgds-toast-container position="top-center">
+<sgds-toast-container>
 <sgds-toast dismissible show>
   <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
   This is a toast notifications This is a toast notifications his is a toast notifications his is a toast notifications
