--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -3,15 +3,32 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
-<h3> long message only</h3>
-<sgds-system-banner show>
+<sgds-masthead></sgds-masthead>
+
+<sgds-mainnav>
+  <div slot="brand">SGDS</div>
+  <div slot="end">End slot</div>
+</sgds-mainnav>
+<sgds-system-banner show dismissible>
   <sgds-system-banner-item>
-    <div>
      1 Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
-    </div>
+      <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"  size="md"></sgds-icon></a
+    ></sgds-link>
+  </sgds-system-banner-item>
+</sgds-system-banner>
+<sgds-footer></sgds-footer>
+
+<h3> long message only</h3>
+<sgds-system-banner show>
+  <sgds-system-banner-item>
+     1 Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
   </sgds-system-banner-item>
 </sgds-system-banner>
 <br/>
