--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -3,6 +3,11 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
+<style>
+.icon-color {
+  color: var(--sgds-warning-color-fixed-light);
+}
+</style>
 <sgds-masthead></sgds-masthead>
 
 <sgds-mainnav>
@@ -11,6 +16,7 @@
 </sgds-mainnav>
 <sgds-system-banner show dismissible>
   <sgds-system-banner-item>
+    <sgds-icon slot="icon" name="exclamation-triangle-fill" size="md" class="icon-color"></sgds-icon>
      1 Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
