--- a/playground/Table.html
+++ b/playground/Table.html
@@ -10,141 +10,33 @@
         max-width: 1200px;
         margin: 0 auto 36px auto;
       }
-      .table {
-        display: table;
-      }
-
-      .table-head {
-        display: table-header-group;
-      }
-
-      .table-body {
-        display: table-row-group;
-      }
-
-      .table-row {
-        display: table-row;
-      }
-
-      .table-cell {
-        display: table-cell;
-        border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
-        padding: var(--sgds-padding-lg);
+      
+      * {
+        margin: 0;
+        padding: 0;
       }
     </style>
   </head>
 
   <body>
     <div class="container">
-      <sgds-table
-      responsive="md"
-      rowHeader="[&quot;Name&quot;, &quot;Age&quot;]"
-      tableData="[
-        [&quot;Alice&quot;, 25],
-        [&quot;Bob&quot;, 30]
-      ]"
-    >
-      <sgds-table-row>
-        <sgds-table-head>#</sgds-table-head>
-        <sgds-table-head>First name</sgds-table-head>
-        <sgds-table-head>Last name</sgds-table-head>
-        <sgds-table-head>Username</sgds-table-head>
-        <sgds-table-head>Action</sgds-table-head>
-      </sgds-table-row>
-
-      <sgds-table-row>
-        <sgds-table-cell>1</sgds-table-cell>
-        <sgds-table-cell>John</sgds-table-cell>
-        <sgds-table-cell>Doe</sgds-table-cell>
-        <sgds-table-cell>
-          <sgds-link>
-            <a href="#">@johndoe</a>
-          </sgds-link>
-        </sgds-table-cell>
-        <sgds-table-cell> </sgds-table-cell>
-      </sgds-table-row>
-
-      <sgds-table-row>
-        <sgds-table-cell>2</sgds-table-cell>
-        <sgds-table-cell>Jane</sgds-table-cell>
-        <sgds-table-cell>Doe</sgds-table-cell>
-        <sgds-table-cell>
-          <sgds-link>
-            <a href="#">@janedoe</a>
-          </sgds-link>
-        </sgds-table-cell>
-        <sgds-table-cell>
-          <sgds-icon-button name="three-dots-vertical"></sgds-icon-button>
-        </sgds-table-cell>
-      </sgds-table-row>
-
-      <sgds-table-row>
-        <sgds-table-cell>3</sgds-table-cell>
-        <sgds-table-cell>Bob</sgds-table-cell>
-        <sgds-table-cell>Smith</sgds-table-cell>
-        <sgds-table-cell>
-          <sgds-link>
-            <a href="#">@bobsmith</a>
-          </sgds-link>
-        </sgds-table-cell>
-        <sgds-table-cell>
-          <sgds-badge outlined> active </sgds-badge>
-        </sgds-table-cell>
-      </sgds-table-row>
-    </sgds-table>
       <h3>Table - Structured elements with horizontal header</h3>
-      <sgds-table>
-        <sgds-table-row>
-          <sgds-table-head>#</sgds-table-head>
-          <sgds-table-head>First name</sgds-table-head>
-          <sgds-table-head>Last name</sgds-table-head>
-          <sgds-table-head>Username</sgds-table-head>
-          <sgds-table-head>Action</sgds-table-head>
-        </sgds-table-row>
 
-        <sgds-table-row>
-          <sgds-table-cell>1</sgds-table-cell>
-          <sgds-table-cell>John</sgds-table-cell>
-          <sgds-table-cell>Doe</sgds-table-cell>
-          <sgds-table-cell>
-            <sgds-link>
-              <a href="#">@johndoe</a>
-            </sgds-link>
-          </sgds-table-cell>
-          <sgds-table-cell>
-            <sgds-icon-button name="three-dots-vertical"></sgds-icon-button>
-          </sgds-table-cell>
-        </sgds-table-row>
-        <sgds-table-row>
-          <sgds-table-cell>2</sgds-table-cell>
-          <sgds-table-cell>Jane</sgds-table-cell>
-          <sgds-table-cell>Doe</sgds-table-cell>
-          <sgds-table-cell>
-            <sgds-link>
-              <a href="#">@janedoe</a>
-            </sgds-link>
-          </sgds-table-cell>
-          <sgds-table-cell>-</sgds-table-cell>
-        </sgds-table-row>
-        <sgds-table-row>
-          <sgds-table-cell>3</sgds-table-cell>
-          <sgds-table-cell>Bob</sgds-table-cell>
-          <sgds-table-cell>Smith</sgds-table-cell>
-          <sgds-table-cell>
-            <sgds-link>
-              <a href="#">@bobsmith</a>
-            </sgds-link>
-          </sgds-table-cell>
-          <sgds-table-cell>
-            <sgds-badge outlined> active </sgds-badge>
-          </sgds-table-cell>
-        </sgds-table-row>
+      <sgds-table
+        headerBackground="true"
+        responsive="md"
+        rowHeader='["Name", "Age"]'
+        tableData='[
+        ["Alice", 25],
+        ["Bob", 30]
+      ]'
+      >
       </sgds-table>
     </div>
 
     <div class="container">
       <h3>Table - Structured elements with vertical header</h3>
-      <sgds-table>
+      <sgds-table headerBackground="true" tableBorder="true">
         <sgds-table-row>
           <sgds-table-head>1</sgds-table-head>
           <sgds-table-cell>John</sgds-table-cell>
@@ -187,7 +79,7 @@
 
     <div class="container">
       <h3>Table - Structured elements with both header</h3>
-      <sgds-table>
+      <sgds-table headerBackground="true" tableBorder="true">
         <sgds-table-row>
           <sgds-table-head>#</sgds-table-head>
           <sgds-table-head>First name</sgds-table-head>
