chore(Table): updated styling and introduced new props

--- a/playground/Table.html
+++ b/playground/Table.html
@@ -9,6 +9,7 @@
       .container {
         max-width: 1200px;
         margin: 0 auto 36px auto;
+        padding: 18px;
       }
       
       * {
@@ -23,6 +24,7 @@
       <h3>Table - Structured elements with horizontal header</h3>
 
       <sgds-table
+        tableBorder="true"
         headerBackground="true"
         responsive="md"
         rowHeader='["Name", "Age"]'
