feat(SystemBanner): noClampAction prop to make show more action optional

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -3,15 +3,23 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
-<h3> long message only</h3>
-<sgds-system-banner show>
+<h3> clamped show more disabled</h3>
+<sgds-system-banner show noClampAction>
   <sgds-system-banner-item>
-    <div>
      1 Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
-    </div>
+  </sgds-system-banner-item>
+</sgds-system-banner>
+<br/>
+<h3> long message only</h3>
+<sgds-system-banner show>
+  <sgds-system-banner-item>
+     1 Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
   </sgds-system-banner-item>
 </sgds-system-banner>
 <br/>
