--- a/playground/Sidebar.html
+++ b/playground/Sidebar.html
@@ -16,27 +16,33 @@
         height: 100vh;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       }
+
       .sidebar-wrapper {
         height: 100%;
         border-right: 1px solid #e5e7eb;
       }
+
       .content {
         flex: 1;
         padding: 24px;
         overflow-y: auto;
       }
+
       .content h1 {
         margin-top: 0;
       }
+
       .example-section {
         margin-bottom: 32px;
       }
+
       .example-title {
         font-size: 16px;
         font-weight: 600;
         margin-bottom: 8px;
         color: #374151;
       }
+
       .example-description {
         font-size: 14px;
         color: #6b7280;
@@ -44,48 +50,45 @@
       }
     </style>
   </head>
+
   <body>
     <div class="sidebar-wrapper">
       <sgds-sidebar expanded overlayPosition="right">
         <div slot="brand-name">brand-name</div>
         <!-- Main Navigation Section -->
         <sgds-sidebar-section title="Main" expanded collapsible>
-          <sgds-sidebar-option selected title="Dashboard">
-            <sgds-icon name="house" slot="icon"></sgds-icon>
-            <sgds-sidebar-option selected title="Summary">
-              <sgds-icon name="house" slot="icon"></sgds-icon
-            ></sgds-sidebar-option>
+          <sgds-sidebar-option title="Dashboard" icon="house">
+            <sgds-sidebar-option title="Summary" icon="building">
+              <sgds-sidebar-option title="Latest Sales" icon="calculator"> </sgds-sidebar-option>
+              <sgds-sidebar-option title="Refunds" icon="monitor"> </sgds-sidebar-option>
+            </sgds-sidebar-option>
+            <sgds-sidebar-option title="Meetings" icon="calendar"> </sgds-sidebar-option>
+            <sgds-sidebar-option title="Gallery" icon="camera"><a href="#div"></a></sgds-sidebar-option>
           </sgds-sidebar-option>
 
-          <sgds-sidebar-option title="Reports">
-            <sgds-icon name="file-text" slot="icon"></sgds-icon>
+          <sgds-sidebar-option title="Reports" icon="file-text">
+            <sgds-sidebar-option title="Yearly" icon="house"></sgds-sidebar-option>
+            <sgds-sidebar-option title="Montly" icon="house"></sgds-sidebar-option>
           </sgds-sidebar-option>
         </sgds-sidebar-section>
 
         <!-- Organization Section (Collapsible) -->
         <sgds-sidebar-section title="Organization" collapsible expanded>
-          <sgds-sidebar-option title="Team Management">
-            <sgds-icon name="users" slot="icon"></sgds-icon>
-          </sgds-sidebar-option>
+          <sgds-sidebar-option title="Team Management" icon="users"> </sgds-sidebar-option>
 
-          <sgds-sidebar-option title="Projects">
-            <sgds-icon name="layers" slot="icon"></sgds-icon>
-          </sgds-sidebar-option>
+          <sgds-sidebar-option title="Projects" icon="layers"> </sgds-sidebar-option>
         </sgds-sidebar-section>
 
         <!-- Configuration Section (Collapsible) -->
         <sgds-sidebar-section title="Configuration" collapsible expanded>
-          <sgds-sidebar-option title="Settings">
-            <sgds-icon name="gear" slot="icon"></sgds-icon>
-          </sgds-sidebar-option>
+          <sgds-sidebar-option title="Settings" icon="gear"> </sgds-sidebar-option>
         </sgds-sidebar-section>
 
         <!-- Support Section -->
         <sgds-sidebar-section title="Support" expanded>
-          <sgds-sidebar-option title="Help & Support">
-            <sgds-icon name="question-circle" slot="icon"></sgds-icon>
+          <sgds-sidebar-option title="Help & Support" icon="question-circle">
             <span
-              slot="after"
+              slot="trailing-icon"
               style="
                 background: #ef4444;
                 color: white;
@@ -102,9 +105,7 @@
             >
           </sgds-sidebar-option>
 
-          <sgds-sidebar-option title="Premium Features" disabled>
-            <sgds-icon name="star" slot="icon"></sgds-icon>
-          </sgds-sidebar-option>
+          <sgds-sidebar-option title="Premium Features" icon="star" disabled> </sgds-sidebar-option>
         </sgds-sidebar-section>
       </sgds-sidebar>
     </div>
